--- a/web/output_contact.css
+++ b/web/output_contact.css
@@ -2431,44 +2431,44 @@ video {
   background-image: url('/public/title1@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/basic1\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/basic1@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/basic1\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/basic1@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/basic2\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/basic2@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/basic2\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/basic2@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/basic\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/basic@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/basic\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/basic@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/form-builder-background\@2x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/form-builder-background@2x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/form-builder-background\@2x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/form-builder-background@2x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/member-info1\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/member-info1@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/member-info1\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/member-info1@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/member-info2\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/member-info2@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/member-info2\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/member-info2@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/member-info3\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/member-info3@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/member-info3\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/member-info3@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/member-info\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/member-info@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/member-info\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/member-info@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/numbers-title-container\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/numbers-title-container@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/numbers-title-container\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/numbers-title-container@3x.png');
 }
 
-.bg-\[url\(\'\/wp-content\/themes\/vision-prime\/web\/public\/title2\@3x\.png\'\)\] {
-  background-image: url('/wp-content/themes/vision-prime/web/public/title2@3x.png');
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/title2\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/title2@3x.png');
 }
 
 .bg-cover {
