--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,12 @@
 /**
- * Theme Name: Vision Prime
+ * Theme Name: Business Setup
  * Theme URI:
  * Author: Rusty
  * Author URI:
- * Description: Vision Prime theme.
+ * Description: Business Setup theme.
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
- * Text Domain:vision-prime
+ * Text Domain:business-setup
  * Version: 1.0
  */
 
