--- a/web/output.css
+++ b/web/output.css
@@ -2414,6 +2414,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-0\.5 {
   gap: 0.125rem;
 }
